# neuralnet-cpp-cuda

./: .gitignore  CMakeLists.txt  README.md
examples/: train_cpu.cpp  train_gpu.cu
include/cpu/: base.h  celoss.h  layer.h  mnist.h  model.h  relu.h  softmax.h  utils.h
include/gpu/: base.cuh  layer.cuh  logsoftmax.cuh  mnist.cuh  model.cuh  nllloss.cuh  relu.cuh  utils.cuh
scripts/: extract_mnist.py
src/cpu/: celoss.cpp  layer.cpp  mnist.cpp  model.cpp  relu.cpp  softmax.cpp  utils.cpp
src/gpu/: layer.cu  logsoftmax.cu  mnist.cu  model.cu  nllloss.cu  relu.cu  utils.cu
